Add index.md, fix up index.html to redirect

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
+<head>
+<title>web-build-tools</title>
+<meta http-equiv="refresh" content="1; URL=https://github.com/Microsoft/web-build-tools/wiki">
+</head>
 <body>
-<h1>Hello, world</h1>
+Redirecting to <a href="https://github.com/Microsoft/web-build-tools/wiki">web-build-tools</a>...
+</body>
+</html>
