Force GitHub to rebuild

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <meta http-equiv="refresh" content="1; URL=https://github.com/Microsoft/web-build-tools/wiki">
 </head>
 <body>
-Redirecting to <a href="https://github.com/Microsoft/web-build-tools/wiki">web-build-tools</a>...
+Redirecting to <a href="https://github.com/Microsoft/web-build-tools/wiki">web-build-tools</a> on GitHub...
 </body>
 </html>
